fix bdd tests